--- a/login.html
+++ b/login.html
@@ -15,9 +15,9 @@
     <h1>Login</h1>
     <form action="">
       <label for="email">Email</label>
-      <input type="email" name="email" id="email" placeholder="Digite seu e-mail" autocomplete="off">
+      <input type="email" name="email" id="email" placeholder="Digite seu e-mail" autocomplete="off" required>
       <label for="password">Senha</label>
-      <input type="password" name="password" id="password" placeholder="Digite a sua senha">
+      <input type="password" name="password" id="password" placeholder="Digite a sua senha" required>
       <a href="#" id="esqueceu-senha">Esqueceu a senha?</a>
       <input type="submit" value="Login">
     </form>
